...
        let alert = NSAlert()
        alert.messageText = "Source Folder Selected"
        alert.informativeText =
            "This folder was previously used as a source. Using it as a destination will remove the source tag. Do you want to continue?"
        alert.alertStyle = .warning
        alert.addButton(withTitle: "Use This Folder")
        alert.addButton(withTitle: "Cancel")
        let response = alert.runModal()
        return response == .alertFirstButtonReturn
    }
}

